@@ -15,15 +15,14 @@
  */
 package com.android.adservices.service.measurement.registration;
 
-import static com.android.adservices.service.measurement.SystemHealthParams.MAX_TRIGGER_REGISTERS_PER_DESTINATION;
 import static com.android.adservices.service.measurement.attribution.TriggerContentProvider.TRIGGER_URI;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyShort;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
@@ -68,13 +67,16 @@ import com.android.adservices.service.measurement.SystemHealthParams;
 import com.android.adservices.service.measurement.Trigger;
 import com.android.adservices.service.measurement.TriggerFixture;
 import com.android.adservices.service.measurement.WebUtil;
+import com.android.adservices.service.measurement.noising.SourceNoiseHandler;
 import com.android.adservices.service.measurement.reporting.DebugReportApi;
+import com.android.adservices.service.measurement.reporting.EventReportWindowCalcDelegate;
 import com.android.adservices.service.measurement.util.UnsignedLong;
 import com.android.adservices.service.stats.AdServicesLogger;
 import com.android.dx.mockito.inline.extended.ExtendedMockito;
 
 import com.google.common.truth.Truth;
 
+import org.json.JSONException;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -94,6 +96,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -118,7 +121,7 @@ public class AsyncRegistrationQueueRunnerTest {
     private static final Uri WEB_DESTINATION = WebUtil.validUri("https://web-destination.test");
     private static final Uri APP_DESTINATION = Uri.parse("android-app://com.app_destination");
     private static final Source SOURCE_1 =
-            SourceFixture.getValidSourceBuilder()
+            SourceFixture.getMinimalValidSourceBuilder()
                     .setEventId(new UnsignedLong(1L))
                     .setPublisher(APP_TOP_ORIGIN)
                     .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
@@ -165,6 +168,7 @@ public class AsyncRegistrationQueueRunnerTest {
     @Mock HttpsURLConnection mUrlConnection;
     @Mock Flags mFlags;
     @Mock AdServicesLogger mLogger;
+    @Mock SourceNoiseHandler mSourceNoiseHandler;
 
     private MockitoSession mStaticMockSession;
 
@@ -199,24 +203,37 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Before
     public void before() throws RemoteException {
+        MockitoAnnotations.initMocks(this);
         mStaticMockSession =
                 ExtendedMockito.mockitoSession()
                         .spyStatic(FlagsFactory.class)
                         .strictness(Strictness.WARN)
                         .startMocking();
-        ExtendedMockito.doReturn(FlagsFactory.getFlagsForTest()).when(FlagsFactory::getFlags);
+        ExtendedMockito.doReturn(mFlags).when(FlagsFactory::getFlags);
 
         mAsyncSourceFetcher = spy(new AsyncSourceFetcher(sDefaultContext));
         mAsyncTriggerFetcher = spy(new AsyncTriggerFetcher(sDefaultContext));
         mMockedSource = spy(SourceFixture.getValidSource());
-        MockitoAnnotations.initMocks(this);
+
         when(mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(any()))
                 .thenReturn(getEnrollment(DEFAULT_ENROLLMENT_ID));
         when(mContentResolver.acquireContentProviderClient(TRIGGER_URI))
                 .thenReturn(mMockContentProviderClient);
         when(mMockContentProviderClient.insert(any(), any())).thenReturn(TRIGGER_URI);
-        when(mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()).thenReturn("");
         when(mFlags.getMeasurementMaxRegistrationRedirects()).thenReturn(20);
+        when(mFlags.getMeasurementMaxRegistrationsPerJobInvocation()).thenReturn(1);
+        when(mFlags.getMeasurementMaxRetriesPerRegistrationRequest()).thenReturn(5);
+        when(mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()).thenReturn("");
+        when(mFlags.getMeasurementMaxSourcesPerPublisher())
+                .thenReturn(Flags.MEASUREMENT_MAX_SOURCES_PER_PUBLISHER);
+        when(mFlags.getMeasurementMaxTriggersPerDestination())
+                .thenReturn(Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION);
+        when(mFlags.getMeasurementMaxAttributionPerRateLimitWindow())
+                .thenReturn(Flags.MEASUREMENT_MAX_ATTRIBUTION_PER_RATE_LIMIT_WINDOW);
+        when(mFlags.getMeasurementMaxDistinctEnrollmentsInAttribution())
+                .thenReturn(Flags.MEASUREMENT_MAX_DISTINCT_ENROLLMENTS_IN_ATTRIBUTION);
+        when(mFlags.getMeasurementMaxDistinctDestinationsInActiveSource())
+                .thenReturn(Flags.MEASUREMENT_MAX_DISTINCT_DESTINATIONS_IN_ACTIVE_SOURCE);
     }
 
     @Test
@@ -243,12 +260,15 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -261,7 +281,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -301,11 +321,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -318,7 +339,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -328,8 +349,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg1 = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -372,11 +393,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -389,7 +411,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -399,8 +421,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -435,11 +457,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -452,7 +475,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -462,8 +485,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -501,7 +524,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -514,7 +537,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -523,8 +546,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
 
@@ -571,7 +594,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -584,7 +607,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -593,8 +616,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
 
@@ -632,7 +655,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -645,7 +668,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -654,8 +677,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
@@ -693,7 +716,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -706,7 +729,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -758,7 +781,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -771,7 +794,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -803,17 +826,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -845,17 +871,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -894,17 +923,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -944,11 +976,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -985,7 +1017,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         KeyValueData redirectCount =
@@ -999,7 +1031,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1032,11 +1064,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1067,11 +1099,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1108,11 +1140,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1155,7 +1187,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -1168,7 +1200,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1212,16 +1244,19 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1252,17 +1287,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1300,11 +1338,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1342,17 +1380,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
-        when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
+        when(mSourceNoiseHandler.assignAttributionModeAndGenerateFakeReports(mMockedSource))
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1371,7 +1412,7 @@ public class AsyncRegistrationQueueRunnerTest {
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
                 getSpyAsyncRegistrationQueueRunner();
 
-        AsyncRegistration validAsyncRegistration =  createAsyncRegistrationForWebTrigger();
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForWebTrigger();
 
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
@@ -1383,11 +1424,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1417,11 +1458,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1458,11 +1499,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1499,11 +1540,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1513,6 +1554,7 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
+
     @Test
     public void insertSource_withFakeReportsFalseAppAttribution_accountsForFakeReportAttribution()
             throws DatastoreException {
@@ -1520,7 +1562,7 @@ public class AsyncRegistrationQueueRunnerTest {
         int fakeReportsCount = 2;
         Source source =
                 spy(
-                        SourceFixture.getValidSourceBuilder()
+                        SourceFixture.getMinimalValidSourceBuilder()
                                 .setAppDestinations(
                                         SourceFixture.ValidSourceParams.ATTRIBUTION_DESTINATIONS)
                                 .setWebDestinations(null)
@@ -1537,7 +1579,9 @@ public class AsyncRegistrationQueueRunnerTest {
                     source.setAttributionMode(Source.AttributionMode.FALSELY);
                     return fakeReports;
                 };
-        doAnswer(falseAttributionAnswer).when(source).assignAttributionModeAndGenerateFakeReports();
+        doAnswer(falseAttributionAnswer)
+                .when(mSourceNoiseHandler)
+                .assignAttributionModeAndGenerateFakeReports(source);
         ArgumentCaptor<Attribution> attributionRateLimitArgCaptor =
                 ArgumentCaptor.forClass(Attribution.class);
 
@@ -1569,7 +1613,7 @@ public class AsyncRegistrationQueueRunnerTest {
         int fakeReportsCount = 2;
         Source source =
                 spy(
-                        SourceFixture.getValidSourceBuilder()
+                        SourceFixture.getMinimalValidSourceBuilder()
                                 .setAppDestinations(null)
                                 .setWebDestinations(
                                         SourceFixture.ValidSourceParams.WEB_DESTINATIONS)
@@ -1584,7 +1628,9 @@ public class AsyncRegistrationQueueRunnerTest {
                     source.setAttributionMode(Source.AttributionMode.FALSELY);
                     return fakeReports;
                 };
-        doAnswer(falseAttributionAnswer).when(source).assignAttributionModeAndGenerateFakeReports();
+        doAnswer(falseAttributionAnswer)
+                .when(mSourceNoiseHandler)
+                .assignAttributionModeAndGenerateFakeReports(source);
         ArgumentCaptor<Attribution> attributionRateLimitArgCaptor =
                 ArgumentCaptor.forClass(Attribution.class);
 
@@ -1616,7 +1662,7 @@ public class AsyncRegistrationQueueRunnerTest {
         int fakeReportsCount = 2;
         Source source =
                 spy(
-                        SourceFixture.getValidSourceBuilder()
+                        SourceFixture.getMinimalValidSourceBuilder()
                                 .setAppDestinations(
                                         SourceFixture.ValidSourceParams.ATTRIBUTION_DESTINATIONS)
                                 .setWebDestinations(
@@ -1638,7 +1684,9 @@ public class AsyncRegistrationQueueRunnerTest {
                 };
         ArgumentCaptor<Attribution> attributionRateLimitArgCaptor =
                 ArgumentCaptor.forClass(Attribution.class);
-        doAnswer(falseAttributionAnswer).when(source).assignAttributionModeAndGenerateFakeReports();
+        doAnswer(falseAttributionAnswer)
+                .when(mSourceNoiseHandler)
+                .assignAttributionModeAndGenerateFakeReports(source);
 
         // Execution
         asyncRegistrationQueueRunner.insertSourceFromTransaction(source, mMeasurementDao);
@@ -1679,7 +1727,7 @@ public class AsyncRegistrationQueueRunnerTest {
         // Setup
         Source source =
                 spy(
-                        SourceFixture.getValidSourceBuilder()
+                        SourceFixture.getMinimalValidSourceBuilder()
                                 .setAppDestinations(
                                         SourceFixture.ValidSourceParams.ATTRIBUTION_DESTINATIONS)
                                 .setWebDestinations(null)
@@ -1692,7 +1740,9 @@ public class AsyncRegistrationQueueRunnerTest {
                     source.setAttributionMode(Source.AttributionMode.NEVER);
                     return fakeReports;
                 };
-        doAnswer(neverAttributionAnswer).when(source).assignAttributionModeAndGenerateFakeReports();
+        doAnswer(neverAttributionAnswer)
+                .when(mSourceNoiseHandler)
+                .assignAttributionModeAndGenerateFakeReports(source);
         ArgumentCaptor<Attribution> attributionRateLimitArgCaptor =
                 ArgumentCaptor.forClass(Attribution.class);
 
@@ -1727,7 +1777,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         // Execution
         when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
@@ -1736,14 +1787,16 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
                         any(), anyInt(), any(), any(), anyLong(), anyLong()))
                 .thenReturn(Integer.valueOf(0));
-        asyncRegistrationQueueRunner.isSourceAllowedToInsert(
-                SOURCE_1,
-                SOURCE_1.getPublisher(),
-                EventSurfaceType.APP,
-                mMeasurementDao,
-                mDebugReportApi);
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        SOURCE_1,
+                        SOURCE_1.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
 
         // Assertions
+        assertTrue(status);
         verify(mMeasurementDao, times(2))
                 .countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
                         any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong());
@@ -1763,7 +1816,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         // Execution
         when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
@@ -1791,6 +1845,39 @@ public class AsyncRegistrationQueueRunnerTest {
     }
 
     @Test
+    public void testRegister_registrationTypeSource_exceedsOneOriginPerPublisherXEnrollmentLimit()
+            throws DatastoreException {
+        // setup
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countSourcesPerPublisherXEnrollmentExcludingRegOrigin(
+                        any(), any(), anyInt(), any(), anyLong(), anyLong()))
+                .thenReturn(3);
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        SOURCE_1,
+                        SOURCE_1.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+
+        // Assert
+        assertFalse(status);
+        verify(mMeasurementDao, times(1))
+                .countSourcesPerPublisherXEnrollmentExcludingRegOrigin(
+                        any(), any(), anyInt(), any(), anyLong(), anyLong());
+    }
+
+    @Test
     public void testRegister_registrationTypeSource_exceedsMaxSourcesLimit()
             throws DatastoreException {
         // setup
@@ -1801,7 +1888,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         // Execution
         doReturn((long) SystemHealthParams.getMaxSourcesPerPublisher())
@@ -1831,7 +1919,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
         // Execution
         when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
                         any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
@@ -1868,7 +1957,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         // Execution
         when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
@@ -1906,7 +1996,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         // Execution
         when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
@@ -1943,7 +2034,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
         doReturn((long) SystemHealthParams.getMaxSourcesPerPublisher())
                 .when(mMeasurementDao)
                 .getNumSourcesPerPublisher(any(), anyInt());
@@ -1972,7 +2064,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         doReturn((long) SystemHealthParams.getMaxSourcesPerPublisher())
                 .when(mMeasurementDao)
@@ -2001,7 +2094,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
                                 new FakeDatastoreManager(),
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
 
         when(mMeasurementDao.getNumTriggersPerDestination(APP_DESTINATION, EventSurfaceType.APP))
                 .thenReturn(0L);
@@ -2014,9 +2108,8 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Test
     public void testRegisterTrigger_atSystemHealthLimits_success() throws Exception {
-        // Setup
         when(mMeasurementDao.getNumTriggersPerDestination(APP_DESTINATION, EventSurfaceType.APP))
-                .thenReturn(MAX_TRIGGER_REGISTERS_PER_DESTINATION - 1L);
+                .thenReturn(Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION - 1L);
 
         Truth.assertThat(
                         AsyncRegistrationQueueRunner.isTriggerAllowedToInsert(
@@ -2026,18 +2119,8 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Test
     public void testRegisterTrigger_overSystemHealthLimits_failure() throws Exception {
-        // Setup
-        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
-                spy(
-                        new AsyncRegistrationQueueRunner(
-                                mContentResolver,
-                                mAsyncSourceFetcher,
-                                mAsyncTriggerFetcher,
-                                new FakeDatastoreManager(),
-                                mDebugReportApi));
-
         when(mMeasurementDao.getNumTriggersPerDestination(APP_DESTINATION, EventSurfaceType.APP))
-                .thenReturn(MAX_TRIGGER_REGISTERS_PER_DESTINATION);
+                .thenReturn((long) Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION);
 
         Truth.assertThat(
                         AsyncRegistrationQueueRunner.isTriggerAllowedToInsert(
@@ -2049,7 +2132,8 @@ public class AsyncRegistrationQueueRunnerTest {
     public void testRegisterWebSource_failsWebAndOsDestinationVerification()
             throws DatastoreException, IOException {
         // Setup
-        AsyncSourceFetcher mFetcher = spy(new AsyncSourceFetcher(mEnrollmentDao, mFlags, mLogger));
+        AsyncSourceFetcher mFetcher =
+                spy(new AsyncSourceFetcher(sDefaultContext, mEnrollmentDao, mFlags, mLogger));
         WebSourceRegistrationRequest request =
                 buildWebSourceRegistrationRequest(
                         Collections.singletonList(DEFAULT_REGISTRATION_PARAM_LIST),
@@ -2083,7 +2167,8 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mFetcher,
                                 mAsyncTriggerFetcher,
                                 datastoreManager,
-                                mDebugReportApi));
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
         ArgumentCaptor<DatastoreManager.ThrowingCheckedConsumer> consumerArgCaptor =
                 ArgumentCaptor.forClass(DatastoreManager.ThrowingCheckedConsumer.class);
         EnqueueAsyncRegistration.webSourceRegistrationRequest(
@@ -2092,10 +2177,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 APP_TOP_ORIGIN,
                 100,
                 Source.SourceType.NAVIGATION,
-                datastoreManager);
+                datastoreManager,
+                mContentResolver);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(2L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertion
         verify(datastoreManager, times(2)).runInTransaction(consumerArgCaptor.capture());
@@ -2113,6 +2199,328 @@ public class AsyncRegistrationQueueRunnerTest {
                                 null)) {
             Assert.assertFalse(cursor.moveToNext());
         }
+    }
+
+    @Test
+    public void isSourceAllowedToInsert_flexEventApiValidNav_pass()
+            throws DatastoreException, JSONException {
+        // setup
+        String triggerSpecsString =
+                "[{\"trigger_data\": [1, 2, 3, 4],"
+                        + "\"event_report_windows\": { "
+                        + "\"start_time\": \"0\", "
+                        + String.format(
+                                "\"end_times\": [%s, %s, %s]}, ",
+                                TimeUnit.DAYS.toMillis(2),
+                                TimeUnit.DAYS.toMillis(7),
+                                TimeUnit.DAYS.toMillis(30))
+                        + "\"summary_window_operator\": \"count\", "
+                        + "\"summary_buckets\": [1, 2, 3]}]\n";
+        Source testSource =
+                SourceFixture.getMinimalValidSourceBuilder()
+                        .setEventId(new UnsignedLong(1L))
+                        .setPublisher(APP_TOP_ORIGIN)
+                        .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
+                        .setWebDestinations(
+                                List.of(WebUtil.validUri("https://web-destination1.test")))
+                        .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
+                        .setRegistrant(Uri.parse("android-app://com.example"))
+                        .setEventTime(new Random().nextLong())
+                        .setExpiryTime(8640000010L)
+                        .setPriority(100L)
+                        // Navigation and Event source has different maximum information gain
+                        // threshold
+                        .setSourceType(Source.SourceType.NAVIGATION)
+                        .setAttributionMode(Source.AttributionMode.TRUTHFULLY)
+                        .setDebugKey(new UnsignedLong(47823478789L))
+                        .setTriggerSpecs(triggerSpecsString)
+                        .setMaxBucketIncrements("2")
+                        .buildInitialFlexEventReportSpec()
+                        .build();
+
+        // setup
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
+                        any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
+                        any(), anyInt(), any(), any(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        testSource,
+                        testSource.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+        // Assert
+        assertTrue(status);
+    }
+
+    @Test
+    public void isSourceAllowedToInsert_flexEventApiInvalidEventExceedMaxInfoGain_fail()
+            throws DatastoreException, JSONException {
+        // setup
+        String triggerSpecsString =
+                "[{\"trigger_data\": [1, 2, 3, 4, 5, 6, 7, 8],"
+                        + "\"event_report_windows\": { "
+                        + "\"start_time\": \"0\", "
+                        + String.format(
+                                "\"end_times\": [%s, %s, %s]}, ",
+                                TimeUnit.DAYS.toMillis(2),
+                                TimeUnit.DAYS.toMillis(7),
+                                TimeUnit.DAYS.toMillis(30))
+                        + "\"summary_window_operator\": \"count\", "
+                        + "\"summary_buckets\": [1, 2, 3, 4]}]\n";
+        Source testSource =
+                SourceFixture.getMinimalValidSourceBuilder()
+                        .setEventId(new UnsignedLong(1L))
+                        .setPublisher(APP_TOP_ORIGIN)
+                        .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
+                        .setWebDestinations(
+                                List.of(WebUtil.validUri("https://web-destination1.test")))
+                        .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
+                        .setRegistrant(Uri.parse("android-app://com.example"))
+                        .setEventTime(new Random().nextLong())
+                        .setExpiryTime(8640000010L)
+                        .setPriority(100L)
+                        // Navigation and Event source has different maximum information gain
+                        // threshold
+                        .setSourceType(Source.SourceType.EVENT)
+                        .setAttributionMode(Source.AttributionMode.TRUTHFULLY)
+                        .setDebugKey(new UnsignedLong(47823478789L))
+                        .setTriggerSpecs(triggerSpecsString)
+                        .setMaxBucketIncrements("3")
+                        .buildInitialFlexEventReportSpec()
+                        .build();
+
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
+                        any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
+                        any(), anyInt(), any(), any(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        testSource,
+                        testSource.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+        // Assert
+        assertFalse(status);
+    }
+
+    @Test
+    public void isSourceAllowedToInsert_flexEventApiValidV1ParamsNavExceedMaxInfoGain_fail()
+            throws DatastoreException, JSONException {
+        // setup
+        String triggerSpecsString =
+                "[{\"trigger_data\": [1, 2, 3, 4, 5, 6, 7, 8],"
+                        + "\"event_report_windows\": { "
+                        + "\"start_time\": \"0\", "
+                        + String.format(
+                                "\"end_times\": [%s, %s, %s, %s]}, ",
+                                TimeUnit.DAYS.toMillis(2),
+                                TimeUnit.DAYS.toMillis(7),
+                                TimeUnit.DAYS.toMillis(14),
+                                TimeUnit.DAYS.toMillis(30))
+                        + "\"summary_window_operator\": \"count\", "
+                        + "\"summary_buckets\": [1, 2, 3, 5, 6]}]\n";
+        Source testSource =
+                SourceFixture.getMinimalValidSourceBuilder()
+                        .setEventId(new UnsignedLong(1L))
+                        .setPublisher(APP_TOP_ORIGIN)
+                        .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
+                        .setWebDestinations(
+                                List.of(WebUtil.validUri("https://web-destination1.test")))
+                        .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
+                        .setRegistrant(Uri.parse("android-app://com.example"))
+                        .setEventTime(new Random().nextLong())
+                        .setExpiryTime(8640000010L)
+                        .setPriority(100L)
+                        // Navigation and Event source has different maximum information gain
+                        // threshold
+                        .setSourceType(Source.SourceType.NAVIGATION)
+                        .setAttributionMode(Source.AttributionMode.TRUTHFULLY)
+                        .setDebugKey(new UnsignedLong(47823478789L))
+                        .setTriggerSpecs(triggerSpecsString)
+                        .setMaxBucketIncrements("4")
+                        .buildInitialFlexEventReportSpec()
+                        .build();
+
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
+                        any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
+                        any(), anyInt(), any(), any(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        testSource,
+                        testSource.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+        // Assert
+        assertFalse(status);
+    }
+
+    @Test
+    public void isSourceAllowedToInsert_flexEventApiValidV1ParamsNavNearBoundary_pass()
+            throws DatastoreException, JSONException {
+        // setup
+        String triggerSpecsString =
+                "[{\"trigger_data\": [1, 2, 3, 4, 5, 6, 7, 8],"
+                        + "\"event_report_windows\": { "
+                        + "\"start_time\": \"0\", "
+                        + String.format(
+                                "\"end_times\": [%s, %s, %s]}, ",
+                                TimeUnit.DAYS.toMillis(2),
+                                TimeUnit.DAYS.toMillis(7),
+                                TimeUnit.DAYS.toMillis(30))
+                        + "\"summary_window_operator\": \"count\", "
+                        + "\"summary_buckets\": [1, 2, 3]}]\n";
+        Source testSource =
+                SourceFixture.getMinimalValidSourceBuilder()
+                        .setEventId(new UnsignedLong(1L))
+                        .setPublisher(APP_TOP_ORIGIN)
+                        .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
+                        .setWebDestinations(
+                                List.of(WebUtil.validUri("https://web-destination1.test")))
+                        .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
+                        .setRegistrant(Uri.parse("android-app://com.example"))
+                        .setEventTime(new Random().nextLong())
+                        .setExpiryTime(8640000010L)
+                        .setPriority(100L)
+                        // Navigation and Event source has different maximum information gain
+                        // threshold
+                        .setSourceType(Source.SourceType.NAVIGATION)
+                        .setAttributionMode(Source.AttributionMode.TRUTHFULLY)
+                        .setDebugKey(new UnsignedLong(47823478789L))
+                        .setTriggerSpecs(triggerSpecsString)
+                        .setMaxBucketIncrements("3")
+                        .buildInitialFlexEventReportSpec()
+                        .build();
+
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
+                        any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
+                        any(), anyInt(), any(), any(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        testSource,
+                        testSource.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+        // Assert
+        assertTrue(status);
+    }
+
+    @Test
+    public void isSourceAllowedToInsert_flexEventApiV1ParamEventNearBoundary_pass()
+            throws DatastoreException, JSONException {
+        // setup
+        String triggerSpecsString =
+                "[{\"trigger_data\": [1, 2],"
+                        + "\"event_report_windows\": { "
+                        + "\"start_time\": \"0\", "
+                        + String.format("\"end_times\": [%s]}, ", TimeUnit.DAYS.toMillis(7))
+                        + "\"summary_window_operator\": \"count\", "
+                        + "\"summary_buckets\": [1]}]\n";
+        Source testSource =
+                SourceFixture.getMinimalValidSourceBuilder()
+                        .setEventId(new UnsignedLong(1L))
+                        .setPublisher(APP_TOP_ORIGIN)
+                        .setAppDestinations(List.of(Uri.parse("android-app://com.destination1")))
+                        .setWebDestinations(
+                                List.of(WebUtil.validUri("https://web-destination1.test")))
+                        .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
+                        .setRegistrant(Uri.parse("android-app://com.example"))
+                        .setEventTime(new Random().nextLong())
+                        .setExpiryTime(8640000010L)
+                        .setPriority(100L)
+                        // Navigation and Event source has different maximum information gain
+                        // threshold
+                        .setSourceType(Source.SourceType.EVENT)
+                        .setAttributionMode(Source.AttributionMode.TRUTHFULLY)
+                        .setDebugKey(new UnsignedLong(47823478789L))
+                        .setTriggerSpecs(triggerSpecsString)
+                        .setMaxBucketIncrements("1")
+                        .buildInitialFlexEventReportSpec()
+                        .build();
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                spy(
+                        new AsyncRegistrationQueueRunner(
+                                mContentResolver,
+                                mAsyncSourceFetcher,
+                                mAsyncTriggerFetcher,
+                                new FakeDatastoreManager(),
+                                mDebugReportApi,
+                                mSourceNoiseHandler));
+
+        // Execution
+        when(mMeasurementDao.countDistinctDestinationsPerPublisherXEnrollmentInActiveSource(
+                        any(), anyInt(), any(), any(), anyInt(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        when(mMeasurementDao.countDistinctEnrollmentsPerPublisherXDestinationInSource(
+                        any(), anyInt(), any(), any(), anyLong(), anyLong()))
+                .thenReturn(Integer.valueOf(0));
+        boolean status =
+                asyncRegistrationQueueRunner.isSourceAllowedToInsert(
+                        testSource,
+                        testSource.getPublisher(),
+                        EventSurfaceType.APP,
+                        mMeasurementDao,
+                        mDebugReportApi);
+        // Assert
+        assertTrue(status);
     }
 
     private RegistrationRequest buildRequest(String registrationUri) {
@@ -2145,7 +2553,8 @@ public class AsyncRegistrationQueueRunnerTest {
                         x ->
                                 new Source.FakeReport(
                                         new UnsignedLong(0L),
-                                        source.getReportingTimeForNoising(0),
+                                        new EventReportWindowCalcDelegate(mFlags)
+                                                .getReportingTimeForNoising(source, 0, false),
                                         destinations))
                 .collect(Collectors.toList());
     }
@@ -2233,7 +2642,8 @@ public class AsyncRegistrationQueueRunnerTest {
                         mAsyncSourceFetcher,
                         mAsyncTriggerFetcher,
                         new FakeDatastoreManager(),
-                        mDebugReportApi));
+                        mDebugReportApi,
+                        mSourceNoiseHandler));
     }
 
     private static void emptyTables(SQLiteDatabase db) {
